testing color jadwal, bug dark mode still not fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,25 +2,27 @@ body {
   font-family: "Poppins", sans-serif;
   padding: 0;
   margin: 0;
-  height: 10000px;
+  height: 100%;
 }
 
-section {
+/* section {
   padding-top: 10px;
-}
+} */
 
 nav {
-  color: black;;
+  color: black;
   padding:5px;
   transition: all 1s;
-  background-color: white; !important black
-  border-bottom: 6px solid black;
+  background-color:white;
+  border-bottom: 1px solid black;
+  shadow-bottom: 5px; 
 
 }
 
 .nav-color {
   background-color: white;
   color: white;
+  border-bottom:none;
 }
 
 .navbar-brand {
@@ -84,6 +86,7 @@ nav .navbar-nav a:hover:after {
 .kelas {
   padding-top: 90px;
   padding-bottom: 240px;
+
 }
 
 .kelas h1 {
@@ -131,20 +134,20 @@ nav .navbar-nav a:hover:after {
   width: 270px;
   text-align: center;
   letter-spacing: 1px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: green;
   text-decoration: none;
   border: 2px solid transparent;
   font-weight: bold;
   padding: 10px 25px;
   border-radius: 30px;
   transition: transform 0.4s;
-  box-shadow: 0px 0px 5px, 0px 0px 10px #858585;
+  box-shadow: 0px 0px 5px green, 0px 0px 10px #858585;
 }
 
 .btn-ganjil:hover {
   color: black;
-  background-color: white;
+  background-color: transparent;
   transform: scale(1.2);
   text-shadow: none;
   cursor: pointer;
@@ -166,14 +169,13 @@ nav .navbar-nav a:hover:after {
   padding: 10px 25px;
   border-radius: 30px;
   transition: transform 0.4s;
-  box-shadow: 0px 0px 5px, 0px 0px 10px #858585;
+  box-shadow: 0px 0px 5px , 0px 0px 10px #858585;
 }
 
 .btn-genap:hover {
   color: green;
   background-color: transparent;
   transform: scale(1.2);
-  text-shadow: none;
   cursor: pointer;
   transition: all 0.4 ease;
   -webkit-transform: scale(1.2);
@@ -188,9 +190,10 @@ nav .navbar-nav a:hover:after {
 
 .jadwal h3 {
   text-align: center;
-  color: green;
+  color: ;
   padding-bottom: 20px;
   padding-top: 30px;
+  font-size:27px;
 }
 
 .jadwal h4 {
@@ -590,3 +593,41 @@ container.minggu-ganjil ul.btn {
 
 }
 
+.siswa .absen {
+  font-size:20px;
+  width:400px;
+}
+
+@media (max-width: 524px) {
+  .siswa .absen {
+    font-size:17px;
+    width:350px;
+  }
+}
+
+@media (max-width: 429px) {
+  .siswa .absen {
+    font-size:15px;
+    width:300px;
+    top:0px;
+  }
+}
+
+.introduction {
+  background-color:#24292e;
+  padding-top:40px;
+  color:white;
+}
+
+.member {
+}
+
+.jadwal {
+  padding-top:60px;
+  background-color:#24292e;
+    color:white;
+}
+
+.introduction h5 {
+  padding-bottom:40px;
+}
